Grammar/DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'{'", "'}'", 
                     "';'", "'['", "']'", "'struct'", "'int'", "'char'", 
                     "'boolean'", "'void'", "'('", "','", "')'", "'if'", 
                     "'else'", "'while'", "'return'", "'='", "'.'", "'-'", 
                     "'!'", "'*'", "'/'", "'%'", "'+'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'&&'", "'||'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "NUM", "CHAR", "SPACES", 
                      "LINE_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_var_declar = 2
    RULE_struct_declar = 3
    RULE_var_type = 4
    RULE_method_declar = 5
    RULE_method_type = 6
    RULE_parameter = 7
    RULE_parameter_type = 8
    RULE_block = 9
    RULE_statement = 10
    RULE_location = 11
    RULE_expression = 12
    RULE_method_call = 13
    RULE_arg = 14
    RULE_higher_arith_op = 15
    RULE_arith_op = 16
    RULE_rel_op = 17
    RULE_eq_op = 18
    RULE_cond_op = 19
    RULE_literal = 20
    RULE_int_literal = 21
    RULE_char_literal = 22
    RULE_bool_literal = 23

    ruleNames =  [ "program", "declaration", "var_declar", "struct_declar", 
                   "var_type", "method_declar", "method_type", "parameter", 
                   "parameter_type", "block", "statement", "location", "expression", 
                   "method_call", "arg", "higher_arith_op", "arith_op", 
                   "rel_op", "eq_op", "cond_op", "literal", "int_literal", 
                   "char_literal", "bool_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    ID=38
    NUM=39
    CHAR=40
    SPACES=41
    LINE_COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(DecafParser.T__0)
            self.state = 49
            self.match(DecafParser.T__1)
            self.state = 50
            self.match(DecafParser.T__2)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 51
                self.declaration()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(DecafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_declar(self):
            return self.getTypedRuleContext(DecafParser.Struct_declarContext,0)


        def var_declar(self):
            return self.getTypedRuleContext(DecafParser.Var_declarContext,0)


        def method_declar(self):
            return self.getTypedRuleContext(DecafParser.Method_declarContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = DecafParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.struct_declar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.var_declar()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.method_declar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_var_declar

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Single_VarDeclarContext(Var_declarContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.Var_declarContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_type(self):
            return self.getTypedRuleContext(DecafParser.Var_typeContext,0)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_VarDeclar" ):
                listener.enterSingle_VarDeclar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_VarDeclar" ):
                listener.exitSingle_VarDeclar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_VarDeclar" ):
                return visitor.visitSingle_VarDeclar(self)
            else:
                return visitor.visitChildren(self)


    class List_VarDeclarContext(Var_declarContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.Var_declarContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_type(self):
            return self.getTypedRuleContext(DecafParser.Var_typeContext,0)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)
        def NUM(self):
            return self.getToken(DecafParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_VarDeclar" ):
                listener.enterList_VarDeclar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_VarDeclar" ):
                listener.exitList_VarDeclar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_VarDeclar" ):
                return visitor.visitList_VarDeclar(self)
            else:
                return visitor.visitChildren(self)



    def var_declar(self):

        localctx = DecafParser.Var_declarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declar)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = DecafParser.Single_VarDeclarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.var_type()
                self.state = 65
                self.match(DecafParser.ID)
                self.state = 66
                self.match(DecafParser.T__4)
                pass

            elif la_ == 2:
                localctx = DecafParser.List_VarDeclarContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.var_type()
                self.state = 69
                self.match(DecafParser.ID)
                self.state = 70
                self.match(DecafParser.T__5)
                self.state = 71
                self.match(DecafParser.NUM)
                self.state = 72
                self.match(DecafParser.T__6)
                self.state = 73
                self.match(DecafParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def var_declar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_declarContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_declarContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_struct_declar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_declar" ):
                listener.enterStruct_declar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_declar" ):
                listener.exitStruct_declar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_declar" ):
                return visitor.visitStruct_declar(self)
            else:
                return visitor.visitChildren(self)




    def struct_declar(self):

        localctx = DecafParser.Struct_declarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_struct_declar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(DecafParser.T__7)
            self.state = 78
            self.match(DecafParser.ID)
            self.state = 79
            self.match(DecafParser.T__2)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 80
                self.var_declar()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(DecafParser.T__3)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DecafParser.T__4:
                self.state = 87
                self.match(DecafParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def struct_declar(self):
            return self.getTypedRuleContext(DecafParser.Struct_declarContext,0)


        def getRuleIndex(self):
            return DecafParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = DecafParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_type)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.match(DecafParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(DecafParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(DecafParser.T__10)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(DecafParser.T__7)
                self.state = 94
                self.match(DecafParser.ID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.struct_declar()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.match(DecafParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_type(self):
            return self.getTypedRuleContext(DecafParser.Method_typeContext,0)


        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DecafParser.ParameterContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_method_declar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declar" ):
                listener.enterMethod_declar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declar" ):
                listener.exitMethod_declar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_declar" ):
                return visitor.visitMethod_declar(self)
            else:
                return visitor.visitChildren(self)




    def method_declar(self):

        localctx = DecafParser.Method_declarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_method_declar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.method_type()
            self.state = 100
            self.match(DecafParser.ID)
            self.state = 101
            self.match(DecafParser.T__12)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10))) != 0):
                self.state = 102
                self.parameter()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.T__13:
                    self.state = 103
                    self.match(DecafParser.T__13)
                    self.state = 104
                    self.parameter()
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 112
            self.match(DecafParser.T__14)
            self.state = 113
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_method_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_type" ):
                listener.enterMethod_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_type" ):
                listener.exitMethod_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_type" ):
                return visitor.visitMethod_type(self)
            else:
                return visitor.visitChildren(self)




    def method_type(self):

        localctx = DecafParser.Method_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_method_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_type(self):
            return self.getTypedRuleContext(DecafParser.Parameter_typeContext,0)


        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = DecafParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.parameter_type()
                self.state = 118
                self.match(DecafParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.parameter_type()
                self.state = 121
                self.match(DecafParser.ID)
                self.state = 122
                self.match(DecafParser.T__5)
                self.state = 123
                self.match(DecafParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_parameter_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_type" ):
                listener.enterParameter_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_type" ):
                listener.exitParameter_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_type" ):
                return visitor.visitParameter_type(self)
            else:
                return visitor.visitChildren(self)




    def parameter_type(self):

        localctx = DecafParser.Parameter_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_declarContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_declarContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.StatementContext)
            else:
                return self.getTypedRuleContext(DecafParser.StatementContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = DecafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(DecafParser.T__2)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__7) | (1 << DecafParser.T__8) | (1 << DecafParser.T__9) | (1 << DecafParser.T__10) | (1 << DecafParser.T__11))) != 0):
                self.state = 130
                self.var_declar()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.T__2) | (1 << DecafParser.T__4) | (1 << DecafParser.T__12) | (1 << DecafParser.T__15) | (1 << DecafParser.T__17) | (1 << DecafParser.T__18) | (1 << DecafParser.T__21) | (1 << DecafParser.T__22) | (1 << DecafParser.T__35) | (1 << DecafParser.T__36) | (1 << DecafParser.ID) | (1 << DecafParser.NUM) | (1 << DecafParser.CHAR))) != 0):
                self.state = 136
                self.statement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(DecafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(DecafParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.block1 = None # BlockContext
            self.block2 = None # BlockContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(DecafParser.ExpressionContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.BlockContext)
            else:
                return self.getTypedRuleContext(DecafParser.BlockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class AssigStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.left = None # LocationContext
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)

        def expression(self):
            return self.getTypedRuleContext(DecafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssigStmt" ):
                listener.enterAssigStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssigStmt" ):
                listener.exitAssigStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssigStmt" ):
                return visitor.visitAssigStmt(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(DecafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStmt" ):
                listener.enterExpressionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStmt" ):
                listener.exitExpressionStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionStmt" ):
                return visitor.visitExpressionStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(DecafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)


    class MethodCallStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def method_call(self):
            return self.getTypedRuleContext(DecafParser.Method_callContext,0)

